--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
           {
             id: "shelfquest",
             title: "ShelfQuest",
-            body: "Software to allow libraries to map their collections for patron wayfinding; currently in use at a mid-sized New England public library.",
-            tech: "MERN",
+            body: "Software to allow libraries to map their collections for patron wayfinding. Currently in use at a mid-sized New England public library.",
+            tech: "MERN stack",
             image: "newassets/sq.png",
             github: "https://shelfquest.app",
           },
           {
             id: "buzzdetect",
             title: "buzzdetect",
-            body: "An open-source deep learning tool for automated bioacoustic pollinator monitoring.",
+            body: "Bee bioacoustics CNN",
             tech: "Python, TensorFlow",
             image: "newassets/buzz.png",
             github: "https://github.com/OSU-Bee-Lab/buzzdetect",
@@ -88,7 +88,7 @@
           {
             id: "webdcr",
             title: "WebDCR website",
-            body: "Built a new website for Dartmouth College Radio from the ground up.",
+            body: "New website for Dartmouth College Radio, built from the ground up.",
             tech: "Jekyll, Alpine.JS",
             image: "newassets/webdcr.png",
             github: "https://webdcr.github.io",
@@ -104,14 +104,14 @@
           {
             id: "tiny-search",
             title: "Tiny Search Engine",
-            body: "Built a simple search engine in C, including indexer and crawler components.",
+            body: "Simple search engine in C, including indexer and crawler components.",
             tech: "C",
             image: "newassets/tse.png",
           },
           {
             id: "video-call",
             title: "Video call",
-            body: "Built a video call app over UDP with end-to-end encryption via Diffie–Hellman key exchange.",
+            body: "Video call over UDP with end-to-end encryption via Diffie–Hellman key exchange.",
             image: "newassets/video.png",
           },
           {
