--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           {
             id: "buzzdetect",
             title: "buzzdetect",
-            body: "Bee bioacoustics CNN",
+            body: "Bee bioacoustics CNN.",
             tech: "Python, TensorFlow",
             image: "newassets/buzz.png",
             github: "https://github.com/OSU-Bee-Lab/buzzdetect",
