--- a/index.html
+++ b/index.html
@@ -63,6 +63,21 @@
       <div class="projects-container" id="projects-container">
         <!-- Projects will be dynamically generated here -->
       </div>
+      <h2 class="heading">Find me elsewhere</h2>
+      <ul>
+        <li>
+          <a href="https://jamesunderwood.substack.com/" target="_BLANK"
+            >Writing</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.goodreads.com/user/show/153388050-james-u"
+            target="_BLANK"
+            >Reading</a
+          >
+        </li>
+      </ul>
       <h2 class="heading">Contact</h2>
       <p>Email: <code>jcunderwood [at] protonmail [dot] com</code></p>
     </div>
