--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="projects-container" id="projects-container">
         <!-- Projects will be dynamically generated here -->
       </div>
-      <h2 class="heading">Find me elsewhere</h2>
+      <h2 class="heading">Misc.</h2>
       <ul>
         <li>
           <a href="https://jamesunderwood.substack.com/" target="_BLANK"
